remodex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: remodex-relay-service
spec:
  selector:
    app: remodex-relay
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: remodex-web-service
spec:
  selector:
    app: remodex-web
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
