remodex/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: remodex
spec:
  hosts:
    - "remodex.lth.so"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            prefix: /relay
        - uri:
            prefix: /v1/push
        - uri:
            exact: /health
      route:
        - destination:
            host: remodex-relay-service.remodex.svc.cluster.local
            port:
              number: 9000
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: remodex-web-service.remodex.svc.cluster.local
            port:
              number: 8080
